--- a/templates/includes/top_nav_mobile.html
+++ b/templates/includes/top_nav_mobile.html
@@ -32,7 +32,7 @@
     </li>
     <!-- Basket icon -->
     <li class="list-inline-item ms-3">
-        <a class="nav-link" href="{% url 'basket_view' %}">
+        <a class="nav-link" href="{% url 'view_basket' %}">
             <div class="text-center">
                 <i class="fas fa-cart-shopping cart-icon position-relative">
                     {% if product_count > 0 %}
