--- a/basket/templates/basket.html
+++ b/basket/templates/basket.html
@@ -13,9 +13,9 @@
 <div class="container mt-3">
     <div class="row mt-3">
         <!-- Products -->
-        <div class="col-12 col-lg-7">
+        <div class="col-12 col-lg-7 mx-auto product-container">
             {% for item in basket_items %}
-            <div class="row mb-3 bg-off-white rounded-4 border me-2 shadow py-3">
+            <div class="row mb-3 bg-off-white rounded-4 border shadow py-3 d-flex align-items-center">
                 <!-- product img -->
                 <div class="col-4">
                     <a href="{% url 'product_detail' item.product.id %}">
@@ -32,17 +32,46 @@
                     <p class="mb-0"><strong>{{ item.product.name }}</strong></p>
                     <p class="sku text-gray">SKU: {{ item.product.sku|upper }}</p>
                     <hr class="text-blue mb-5 w-75">
-                    <p class="mb-3">Qty: {{ item.quantity }}</p>
-                    <p>€{{ item.product.price}}<span class="ms-5">€{{ item.product.price}}</span></p>
+                    <!-- Adjust Quantity -->
+                    <!-- from boutique_ado walkthrough -->
+                    <form class="form update-form mb-5" method="POST" action="{% url 'adjust_basket' item.item_id %}">
+                        {% csrf_token %}
+                        <div class="form-group d-flex">
+                            <div class="input-group w-75">
+                                <div class="input-group-prepend">
+                                    <button class="decrement-qty btn btn-custom-blue rounded-0 border-0"
+                                        data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                        <span>
+                                            <i class="fas fa-minus"></i>
+                                        </span>
+                                    </button>
+                                </div>
+                                <input class="form-control form-control-sm qty_input" type="number" name="quantity"
+                                    value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id }}"
+                                    id="id_qty_{{ item.item_id }}">
+                                <div class="input-group-append">
+                                    <button class="increment-qty btn btn-custom-yellow rounded-0 border-0"
+                                        data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                        <span>
+                                            <i class="fas fa-plus"></i>
+                                        </span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <p class="mb-0 me-2">€{{ item.product.price}}
+                        <span class="ms-3"><strong>€{{item.product.price}}</strong></span>
+                    </p>
                 </div>
-                <!-- <hr class="text-blue my-2 custom-hr mx-auto"> -->
+
             </div>
 
             {%endfor%}
         </div>
         <!-- Purchase summary -->
-        <div class="col-12 col-lg-4">
-            <div class="summary-container bg-off-white rounded-4 border shadow px-3">
+        <div class="col-12 col-lg-4 mx-auto summary-container">
+            <div class="px-3 summary-container-inner">
                 <div class="row mt-3">
                     <div class="col-auto"><span>Subtotal:</span></div>
                     <div class="col text-end"><span>€{{ items_total|floatformat:2 }}</span></div>
@@ -70,7 +99,7 @@
                         {% endif %}
                 </div>
                 <!-- Buttons -->
-                <div class="row my-3">
+                <div class="row mt-3 mb-4">
                     <div class="col-6 d-flex justify-content-center">
                         <a href="{% url 'products' %}" class="btn btn-custom-blue w-100">
                             <span class="icon">
@@ -105,4 +134,58 @@
 </div>
 
 {% endif %}
+{% endblock %}
+
+<!-- From boutique_ado walkthrough -->
+{% block postloadjs %}
+{{ block.super }}
+<script type="text/javascript">
+
+    // Disable +/- buttons outside 1-99 range
+    function handleEnableDisable(itemId) {
+        var currentValue = parseInt($(`#id_qty_${itemId}`).val());
+        var minusDisabled = currentValue < 2;
+        var plusDisabled = currentValue > 98;
+        $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
+        $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
+    }
+
+    // Ensure proper enabling/disabling of all inputs on page load
+    var allQtyInputs = $('.qty_input');
+    for (var i = 0; i < allQtyInputs.length; i++) {
+        var itemId = $(allQtyInputs[i]).data('item_id');
+        handleEnableDisable(itemId);
+    }
+
+    // Check enable/disable every time the input is changed via default buttons
+    $('.qty_input').change(function () {
+        var itemId = $(this).data('item_id');
+        handleEnableDisable(itemId);
+    });
+
+    // Increment quantity
+    $('.increment-qty').click(function (e) {
+        e.preventDefault();
+        var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
+        var currentValue = parseInt($(closestInput).val());
+        $(closestInput).val(currentValue + 1);
+        // cal the enable disable method on product every time we click
+        var itemId = $(this).data('item_id');
+        handleEnableDisable(itemId);
+        // Submit the form
+        $(this).closest('form').submit();
+    });
+
+    // Decrement quantity
+    $('.decrement-qty').click(function (e) {
+        e.preventDefault();
+        var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
+        var currentValue = parseInt($(closestInput).val());
+        $(closestInput).val(currentValue - 1);
+        var itemId = $(this).data('item_id');
+        handleEnableDisable(itemId);
+        // Submit the form
+        $(this).closest('form').submit();
+    });
+</script>
 {% endblock %}
