--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
                         </ul>
                     </li>
                     <li class="list-inline-item ms-3">
-                        <a class="nav-link" href="{% url 'basket_view' %}">
+                        <a class="nav-link" href="{% url 'view_basket' %}">
                             <div class="text-center ms-2">
                                 <i class="fas fa-cart-shopping cart-icon position-relative">
                                     {% if product_count > 0 %}
