Added toast notifications #84

--- a/basket/templates/basket.html
+++ b/basket/templates/basket.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% load bag_tools %}
+{% load basket_tools %}
 
 {% block extra_title %}Basket{% endblock %}
 
