--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -4,20 +4,20 @@
 {% block extra_title %}Product{% endblock %}
 
 {% block content %}
-<div class="container-fluid text">
-    <div class="row justify-content-center mt-4 ">
-        <div
-            class="col-11 col-md-5 col-lg-4 col-xl-4 col-xxl-4 bg-white me-md-4 mb-4 shadow rounded-3 border border-1 d-flex align-items-center">
+<div class="container-fluid">
+    <div class="row justify-content-center mt-4">
+        <div class="col-11 col-sm-8 col-md-5 col-lg-4 col-xl-4 col-xxl-4  me-md-4 mb-4 d-flex align-items-top">
             <div class="image-container">
                 {% if product.image %}
-                <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                <img class="card-img-top img-fluid bg-white shadow rounded-3 border border-1"
+                    src="{{ product.image.url }}" alt="{{ product.name }}">
                 {% else %}
                 <img class="card-img-top img-fluid" src="{% static 'images/no-image-placeholder.webp' %}"
                     alt=" {{ product.name }}">
                 {% endif %}
             </div>
         </div>
-        <div class="col-11 col-md-6 col-lg-7 col-xl-6 col-xxl-5 bg-white mb-4 shadow rounded-3 border border-1">
+        <div class="col-11 col-md-11 col-lg-7 col-xl-6 col-xxl-5 bg-white mb-4 shadow rounded-3 border border-1">
             <div class="details_container px-2">
                 <p class="mt-3 fs-4"><strong>{{ product.name }}</strong></p>
                 <p class="text-blue fs-5"><strong>€{{ product.price}}</strong></p>
