--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+<!-- Lightbox2 CSS -->
+<link rel="stylesheet" href="{% static 'lightbox2/css/lightbox.min.css' %}">
+{% endblock %}
+
+{% block lightbox %}
+<!-- Lightbox2 javascript -->
+<script src="{% static 'lightbox2/js/lightbox-plus-jquery.min.js' %}"></script>
+{% endblock %}
+
 {% block extra_title %}Product{% endblock %}
 
 {% block content %}
@@ -9,11 +19,15 @@
         <div class="col-11 col-sm-8 col-md-5 col-lg-4 col-xl-4 col-xxl-4  me-md-4 mb-4 d-flex align-items-top">
             <div class="image-container">
                 {% if product.image %}
-                <img class="card-img-top img-fluid bg-white shadow rounded-3 border border-1"
-                    src="{{ product.image.url }}" alt="{{ product.name }}">
+                <a href="{{ product.image.url }}" data-lightbox="product-image">
+                    <img class="card-img-top img-fluid bg-white shadow rounded-3 border border-1"
+                        src="{{ product.image.url }}" alt="{{ product.name }}">
+                </a>
                 {% else %}
-                <img class="card-img-top img-fluid" src="{% static 'images/no-image-placeholder.webp' %}"
-                    alt=" {{ product.name }}">
+                <a href="{{ product.image.url }}" data-lightbox="product-image">
+                    <img class="card-img-top img-fluid" src="{% static 'images/no-image-placeholder.webp' %}"
+                        alt=" {{ product.name }}">
+                </a>
                 {% endif %}
             </div>
         </div>
