--- a/templates/base.html
+++ b/templates/base.html
@@ -176,6 +176,7 @@
     </footer>
 
     {% block postloadjs %}
+    <!-- needs to go before lightbox as it is a dependency -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
@@ -191,11 +192,13 @@
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/69c4af19c8.js" crossorigin="anonymous"></script>
 
+    {% block lightbox %}{% endblock %}
+
     <!-- Show toasts  -->
     <script type="text/javascript">
-        $(document).ready(function() {
-          $('.toast').toast('show');
-      });
+        $(document).ready(function () {
+            $('.toast').toast('show');
+        });
     </script>
     {% endblock %}
 
