--- a/templates/base.html
+++ b/templates/base.html
@@ -172,7 +172,59 @@
 
     <!-- Footer section -->
     <footer>
+        <div class="container-fluid footer-container">
+            <div class="row d-flex justify-content-between">
+                <div class="col-12 col-sm-6 col-lg-4 mt-2">
+                    <h5 class="text-center text-decoration-underline"><strong>Information</strong></h5>
+                    <ul class="list-unstyled ms-2 text-center">
+                        <li>
+                            <a href="" class="nav-link fs-6 mb-1">About Us</a>
+                            <a href="" class="nav-link fs-6 mb-1">Contact Us</a>
+                            <a href="" class="nav-link fs-6">Privacy Policy</a>
+                        </li>
+                    </ul>
 
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 mt-2 d-flex flex-column align-items-center">
+                    <h5 class="text-center text-decoration-underline"><strong>Find Us</strong></h5>
+                    <ul class="list-unstyled list-inline mt-3">
+                        <li class="list-inline-item">
+                            <a class="btn btn-outline-light fb-icon"
+                                href="https://www.facebook.com/" target="_blank" rel="noopener"
+                                aria-label="Check out our Facebook page (opens in a new tab)"><i
+                                    class="fab fa-facebook-f text-white"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn btn-outline-light insta-icon"
+                                href="https://www.instagram.com/" target="_blank"
+                                rel="noopener" aria-label="Check out our Instagram page (opens in a new tab)"><i
+                                    class="fab fa-instagram text-off-white"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn btn-outline-light tiktok-icon" href="https://www.tiktok.com/" target="_blank"
+                                rel="noopener" aria-label="Check out our Tiktok page (opens in a new tab)"><i
+                                    class="fab fa-tiktok text-white"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn btn-outline-light youtube-icon" href="https://www.youtube.com/"
+                                target="_blank" rel="noopener"
+                                aria-label="Check out ours Youtube page (opens in a new tab)"><i
+                                    class="fab fa-youtube text-red"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn btn-outline-light x-icon" href="https://twitter.com/" target="_blank"
+                                rel="noopener" aria-label="Check out our Twitter page (opens in a new tab)"><i
+                                    class="fab fa-x-twitter text-white"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-12 col-lg-4 mt-2">
+                    <h5 class="text-center text-decoration-underline"><strong>Newsletter</strong></h5>
+
+                </div>
+            </div>
+            <div class="row"><p class=" mb-0 p-1 text-center">©PokémonTcgIreland 2024</p></div>
+        </div>
     </footer>
 
     {% block postloadjs %}
