--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -348,7 +348,7 @@ header {
     color: var(--blue) !important;
 }
 
-/************************** Basket ************************/
+/************************** BASKET ************************/
 .sku {
     font-size: 0.75rem;
 }
