--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -1,4 +1,107 @@
 {% extends "base.html" %}
 {% load static %}
+{% load basket_tools %}
 
 {% block extra_title %}Checkout{% endblock %}
+
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col text-center mt-3 mb-3">
+            <h2><strong>Checkout</strong></h2>
+            <hr class="w-75 mb-1 mx-auto">
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <!-- Checkout form -->
+        <div class="col-11 col-md-5 me-md-2 border rounded-4 bg-white mb-3">
+            <p class="mt-2">Please fill in the form below to complete your order</p>
+
+        </div>
+        <!-- Order summary and details -->
+        <div class="col-11 col-md-6">
+            <!-- Order line items -->
+            <div class="row border rounded-4 bg-white mb-3">
+                <div class="col">
+                    <h5 class="mt-2">Your Items ({{ product_count }})</h5>
+                    <!-- View items collapse -->
+                    <div class="mb-2">
+                        <a class="btn btn-custom-blue w-100 text-end" data-bs-toggle="collapse" href="#basket-summary"
+                            role="button" aria-expanded="false" aria-controls="basket-summary" id="collapse-toggle">
+                            Click to view your Items <i class="fas fa-angle-down"></i>
+                        </a>
+                    </div>
+                    <div class="collapse" id="basket-summary">
+                            <!-- Create a summary for each product -->
+                            {% for item in basket_items %}
+                            <div class="row mt-1">
+                                <div class="col-12 col-sm-2 mb-1">
+                                    <a href="{% url 'product_detail' item.product.id %}">
+                                        {% if item.product.image %}
+                                        <img class="img-fluid rounded-4" src="{{ item.product.image.url }}"
+                                            alt="{{ product.name }}">
+                                        {% else %}
+                                        <img class="img-fluid rounded-4"
+                                            src="{% static 'images/no-image-placeholder.webp' %}"
+                                            alt=" {{ product.name }}">
+                                        {% endif %}
+                                    </a>
+                                </div>
+                                <div class="col 8 col-sm-7">
+                                    <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                    <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                                </div>
+                                <div class="col 2 col-sm-3 text-center">
+                                    <p class="my-0 small text-muted">
+                                        €{{ item.product.price | calc_subtotal:item.quantity }}
+                                    </p>
+                                </div>
+                            </div>
+                            <hr class="w-75 text-muted mx-auto">
+                            {% endfor %}
+                        
+                    </div>
+                </div>
+            </div>
+            <!-- Order summary -->
+            <div class="row mt-3 border rounded-4 bg-white mb-3">
+                <h5 class="mt-2">Payment Summary</h5>
+                <div class="col-7 offset-2">
+                    <p class="my-0">Order Total:</p>
+                    <p class="my-0">Shipping:</p>
+                    <p class="my-3">Total:</p>
+                </div>
+                <div class="col-3">
+                    <p class="my-0">€{{ items_total | floatformat:2 }}</p>
+                    <p class="my-0">
+                        {% if shipping > 0 %} 
+                            €{{ shipping | floatformat:2 }} 
+                        {% else %} 
+                            FREE 
+                        {% endif%}
+                    </p>
+                    <p class="my-3"><strong>€{{ basket_total | floatformat:2 }}</strong></p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+<!-- Change arrow on collapse -->
+{% block postloadjs %}
+{{ block.super }}
+<script type="text/javascript">
+document.getElementById('collapse-toggle').addEventListener('click', function() {
+    var icon = this.querySelector('i');
+    if (icon.classList.contains('fa-angle-down')) {
+        icon.classList.remove('fa-angle-down');
+        icon.classList.add('fa-angle-up');
+    } else {
+        icon.classList.remove('fa-angle-up');
+        icon.classList.add('fa-angle-down');
+    }
+});
+</script>
+{% endblock %}
