--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -15,6 +15,12 @@
 
 {% block content %}
 <div class="container-fluid">
+    <div class="row">
+        <div class="col text-center mt-3">
+            <h2><strong>Product Details</strong></h2>
+            <hr class="w-75 mb-1 mx-auto">
+        </div>
+    </div>
     <div class="row justify-content-center mt-4">
         <div class="col-11 col-sm-8 col-md-5 col-lg-4 col-xl-4 col-xxl-4  me-md-4 mb-4 d-flex align-items-top">
             <div class="image-container">
