--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col text-center mt-3">
-            <h2>Products</h2>
+            <h2><strong>Products</strong></h2>
             <hr class="w-75 mb-1 mx-auto">
         </div>
     </div>
