--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -14,14 +14,74 @@
     </div>
     <div class="row justify-content-center">
         <!-- Checkout form -->
-        <div class="col-11 col-md-5 me-md-2 border rounded-4 bg-white mb-3">
-            <p class="mt-2">Please fill in the form below to complete your order</p>
+        <div class="col-11 col-md-5 me-md-2 border rounded-4 bg-white mb-3 shadow">
+            <p class="mt-2 text-center">Please fill in the form below to complete your order</p>
+            <form action="{% url 'checkout' %}" method="POST" id="payment-form">
+                {% csrf_token %}
+                <fieldset class="rounded px-3 mb-5">
+                    <legend class="fieldset-label small k w-auto"><strong>Details</strong></legend>
+                    {{ order_form.full_name | as_crispy_field }}
+                    {{ order_form.email | as_crispy_field }}
+                </fieldset>
+                <fieldset class="rounded px-3 mb-5">
+                    <legend class="fieldset-label small w-auto"><strong>Shipping</strong></legend>
+                    {{ order_form.phone_number | as_crispy_field }}
+                    {{ order_form.country | as_crispy_field }}
+                    {{ order_form.postcode | as_crispy_field }}
+                    {{ order_form.town_or_city | as_crispy_field }}
+                    {{ order_form.street_address1 | as_crispy_field }}
+                    {{ order_form.street_address2 | as_crispy_field }}
+                    {{ order_form.county | as_crispy_field }}
+                    <div class="form-check form-check-inline float-right mr-0">
+                        {% if user.is_authenticated %}
+                        <label class="form-check-label" for="id-save-info">Save this information to my
+                            profile</label>
+                        <input class="form-check-input" type="checkbox" id="id-save-info" name="save-info"
+                            checked>
+                        {% else %}
+                        <label class="form-check-label" for="id-save-info">
+                            <a class="text-blue" href="{% url 'account_signup' %}">Create an account</a> or
+                            <a class="text-blue" href="{% url 'account_login' %}">login</a> to save this information
+                        </label>
+                        {% endif %}
+                    </div>
+                </fieldset>
+                <fieldset class="px-3">
+                    <legend class="fieldset-label small w-auto"><strong>Payment</strong></legend>
+                    <!-- A Stripe card element will go here -->
+                    <div class="mb-3" id="card-element"></div>
+
+                    <!-- Used to display form errors -->
+                    <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                </fieldset>
+
+                <div class="submit-button text-end mt-5 mb-2">
+                    <a href="{% url 'view_basket' %}" class="btn btn-custom-blue mb-1">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="font-weight-bold">Adjust Basket</span>
+                    </a>
+                    <button id="submit-button" class="btn btn-custom-yellow mb-1">
+                        <span class="font-weight-bold">Complete Order</span>
+                        <span class="icon">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </button>
+                    <p class="small text-danger my-0">
+                        <span class="icon">
+                            <i class="fas fa-exclamation-circle"></i>
+                        </span>
+                        <span>Your card will be charged <strong>€{{ basket_total|floatformat:2 }}</strong></span>
+                    </p>
+                </div>
+            </form>
 
         </div>
         <!-- Order summary and details -->
         <div class="col-11 col-md-6">
             <!-- Order line items -->
-            <div class="row border rounded-4 bg-white mb-3">
+            <div class="row border rounded-4 bg-white mb-3 shadow">
                 <div class="col">
                     <h5 class="mt-2">Your Items ({{ product_count }})</h5>
                     <!-- View items collapse -->
@@ -64,8 +124,9 @@
                 </div>
             </div>
             <!-- Order summary -->
-            <div class="row mt-3 border rounded-4 bg-white mb-3">
+            <div class="row mt-3 border rounded-4 bg-white mb-3 shadow">
                 <h5 class="mt-2">Payment Summary</h5>
+                <hr class="w-100 text-muted">
                 <div class="col-7 offset-2">
                     <p class="my-0">Order Total:</p>
                     <p class="my-0">Shipping:</p>
