--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load basket_tools %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+{% endblock %}
+
 {% block extra_title %}Checkout{% endblock %}
 
 {% block content %}
@@ -36,8 +40,7 @@
                         {% if user.is_authenticated %}
                         <label class="form-check-label" for="id-save-info">Save this information to my
                             profile</label>
-                        <input class="form-check-input" type="checkbox" id="id-save-info" name="save-info"
-                            checked>
+                        <input class="form-check-input" type="checkbox" id="id-save-info" name="save-info" checked>
                         {% else %}
                         <label class="form-check-label" for="id-save-info">
                             <a class="text-blue" href="{% url 'account_signup' %}">Create an account</a> or
@@ -49,7 +52,7 @@
                 <fieldset class="px-3">
                     <legend class="fieldset-label small w-auto"><strong>Payment</strong></legend>
                     <!-- A Stripe card element will go here -->
-                    <div class="mb-3" id="card-element"></div>
+                    <div class="mb-3 border" id="card-element"></div>
 
                     <!-- Used to display form errors -->
                     <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
@@ -57,19 +60,19 @@
 
                 <div class="submit-button text-end mt-5 mb-2">
                     <a href="{% url 'view_basket' %}" class="btn btn-custom-blue mb-1">
-                        <span class="icon">
+                        <span>
                             <i class="fas fa-chevron-left"></i>
                         </span>
                         <span class="font-weight-bold">Adjust Basket</span>
                     </a>
                     <button id="submit-button" class="btn btn-custom-yellow mb-1">
                         <span class="font-weight-bold">Complete Order</span>
-                        <span class="icon">
+                        <span>
                             <i class="fas fa-lock"></i>
                         </span>
                     </button>
                     <p class="small text-danger my-0">
-                        <span class="icon">
+                        <span">
                             <i class="fas fa-exclamation-circle"></i>
                         </span>
                         <span>Your card will be charged <strong>€{{ basket_total|floatformat:2 }}</strong></span>
@@ -92,34 +95,33 @@
                         </a>
                     </div>
                     <div class="collapse" id="basket-summary">
-                            <!-- Create a summary for each product -->
-                            {% for item in basket_items %}
-                            <div class="row mt-1">
-                                <div class="col-12 col-sm-2 mb-1">
-                                    <a href="{% url 'product_detail' item.product.id %}">
-                                        {% if item.product.image %}
-                                        <img class="img-fluid rounded-4" src="{{ item.product.image.url }}"
-                                            alt="{{ product.name }}">
-                                        {% else %}
-                                        <img class="img-fluid rounded-4"
-                                            src="{% static 'images/no-image-placeholder.webp' %}"
-                                            alt=" {{ product.name }}">
-                                        {% endif %}
-                                    </a>
-                                </div>
-                                <div class="col 8 col-sm-7">
-                                    <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                                    <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
-                                </div>
-                                <div class="col 2 col-sm-3 text-center">
-                                    <p class="my-0 small text-muted">
-                                        €{{ item.product.price | calc_subtotal:item.quantity }}
-                                    </p>
-                                </div>
+                        <!-- Create a summary for each product -->
+                        {% for item in basket_items %}
+                        <div class="row mt-1">
+                            <div class="col-12 col-sm-2 mb-1">
+                                <a href="{% url 'product_detail' item.product.id %}">
+                                    {% if item.product.image %}
+                                    <img class="img-fluid rounded-4" src="{{ item.product.image.url }}"
+                                        alt="{{ product.name }}">
+                                    {% else %}
+                                    <img class="img-fluid rounded-4"
+                                        src="{% static 'images/no-image-placeholder.webp' %}" alt=" {{ product.name }}">
+                                    {% endif %}
+                                </a>
                             </div>
-                            <hr class="w-75 text-muted mx-auto">
-                            {% endfor %}
-                        
+                            <div class="col 8 col-sm-7">
+                                <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                            </div>
+                            <div class="col 2 col-sm-3 text-center">
+                                <p class="my-0 small text-muted">
+                                    €{{ item.product.price | calc_subtotal:item.quantity }}
+                                </p>
+                            </div>
+                        </div>
+                        <hr class="w-75 text-muted mx-auto">
+                        {% endfor %}
+
                     </div>
                 </div>
             </div>
@@ -135,10 +137,10 @@
                 <div class="col-3">
                     <p class="my-0">€{{ items_total | floatformat:2 }}</p>
                     <p class="my-0">
-                        {% if shipping > 0 %} 
-                            €{{ shipping | floatformat:2 }} 
-                        {% else %} 
-                            FREE 
+                        {% if shipping > 0 %}
+                        €{{ shipping | floatformat:2 }}
+                        {% else %}
+                        FREE
                         {% endif%}
                     </p>
                     <p class="my-3"><strong>€{{ basket_total | floatformat:2 }}</strong></p>
@@ -150,19 +152,26 @@
 </div>
 {% endblock %}
 
-<!-- Change arrow on collapse -->
 {% block postloadjs %}
 {{ block.super }}
+<!-- Change arrow on collapse -->
 <script type="text/javascript">
-document.getElementById('collapse-toggle').addEventListener('click', function() {
-    var icon = this.querySelector('i');
-    if (icon.classList.contains('fa-angle-down')) {
-        icon.classList.remove('fa-angle-down');
-        icon.classList.add('fa-angle-up');
-    } else {
-        icon.classList.remove('fa-angle-up');
-        icon.classList.add('fa-angle-down');
-    }
-});
+    document.getElementById('collapse-toggle').addEventListener('click', function () {
+        var icon = this.querySelector('i');
+        if (icon.classList.contains('fa-angle-down')) {
+            icon.classList.remove('fa-angle-down');
+            icon.classList.add('fa-angle-up');
+        } else {
+            icon.classList.remove('fa-angle-up');
+            icon.classList.add('fa-angle-down');
+        }
+    });
 </script>
+<!-- Stripe card element -->
+{{ stripe_public_key|json_script:"id_stripe_public_key" }}
+{{ client_secret|json_script:"id_client_secret" }}
+
+<!-- Js to load stripe card element -->
+<script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+
 {% endblock %}
