--- a/templates/base.html
+++ b/templates/base.html
@@ -246,6 +246,9 @@
 
     {% block lightbox %}{% endblock %}
 
+   <!-- Stripe  -->
+    <script src="https://js.stripe.com/v3/"></script>
+
     <!-- Show toasts  -->
     <script type="text/javascript">
         $(document).ready(function () {
