--- a/basket/templates/basket.html
+++ b/basket/templates/basket.html
@@ -152,7 +152,7 @@
 {% else %}
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-10 col-lg-8 text-center bg-white shadow border border-1 rounded-4 py-5">
+        <div class="col-10 col-lg-8 text-center bg-white shadow border border-1 rounded-4 py-5 mb-3">
             <p class="fs-5 mb-4">Your basket is currently empty</p>
             <a href="{% url 'products' %}" class="btn btn-custom-yellow shop-btn shadow"> Continue Shopping
             </a>
