--- a/checkout/templates/checkout_success.html
+++ b/checkout/templates/checkout_success.html
@@ -13,13 +13,166 @@
         <div class="col text-center mt-3 mb-3">
             <h2><strong>Thank You</strong></h2>
             <hr class="w-75 mb-1 mx-auto">
-            <p>Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+            <p>Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.
+            </p>
         </div>
     </div>
-    <div class="row">
-       <div class="col-12 col-lg-7">
+    <div class="row d-flex justify-content-center">
+        <div class="col-11 col-lg-7 order-summary-container border shadow rounded-4 px-3 mb-3">
+            <!-- Order info -->
+            <div class="row">
+                <div class="col">
+                    <h5 class="text-center mt-3 mb-0"><strong>Order Information</strong></h5>
+                    <hr class="w-100 mb-2 mt-1 mx-auto">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <p class="mb-0"><strong>Order Number:</strong></p>
+                </div>
+                <div class="col-12 col-md-8 text-md-end">
+                    <p class="overflow-wrap">{{ order.order_number }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <p class="mb-0"><strong>Order Date:</strong></p>
+                </div>
+                <div class="col-12 col-md-8  text-md-end">
+                    <p>{{ order.date }}</p>
+                </div>
+            </div>
+            <!-- Items in order -->
+            <div class="row">
+                <div class="col">
+                    <h5 class="text-center mb-0"><strong>Items In Order</strong></h5>
+                    <hr class="w-100 mb-2 mt-1 mx-auto">
+                </div>
+            </div>
+            {% for item in order.lineitems.all %}
+            <div class="row">
+                <div class="col-8">
+                    <p>{{ item.product.name }}</p>
+                </div>
+                <div class="col-4 text-end">
+                    <p>{{ item.quantity }} @ €{{ item.product.price }}</p>
+                </div>
+            </div>
+            {% endfor %}
 
-       </div>
+            <!-- Shipping details -->
+            <div class="row">
+                <div class="col">
+                    <h5 class="text-center mb-0"><strong>Shipping Details</strong></h5>
+                    <hr class="w-100 mb-2 mt-1 mx-auto">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <p class="mb-0"><strong>Full Name:</strong></p>
+                </div>
+                <div class="col-8 text-end">
+                    <p class="mb-0">{{ order.full_name }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <p class="mb-0"><strong>Address1:</strong></p>
+                </div>
+                <div class="col-8 text-end mb-0">
+                    <p class="mb-0">{{ order.street_address1 }}</p>
+                </div>
+            </div>
+            {% if order.address2 %}
+            <div class="row">
+                <div class="col-4">
+                    <p class="mb-0"><strong>Address2:</strong></p>
+                </div>
+                <div class="col-8 text-end">
+                    <p class="mb-0">{{ order.street_address2 }}</p>
+                </div>
+            </div>
+            {% endif %}
+
+            {% if order.county %}
+            <div class="row">
+                <div class="col-4">
+                    <p class="mb-0"><strong>County:</strong></p>
+                </div>
+                <div class="col-8 text-end">
+                    <p class="mb-0">{{ order.county}}</p>
+                </div>
+            </div>
+            {% endif %}
+            <div class="row">
+                <div class="col-4">
+                    <p class="mb-0"><strong>Town or City:</strong></p>
+                </div>
+                <div class="col-8 text-end">
+                    <p class="mb-0">{{ order.town_or_city }}</p>
+                </div>
+            </div>
+
+            {% if order.postcode %}
+            <div class="row">
+                <div class="col-4">
+                    <p class="mb-0"><strong>Post Code:</strong></p>
+                </div>
+                <div class="col-8 text-end">
+                    <p class="mb-0">{{ order.postcode }}</p>
+                </div>
+            </div>
+            {% endif %}
+
+            <div class="row">
+                <div class="col-4">
+                    <p class="mb-0"><strong>Country:</strong></p>
+                </div>
+                <div class="col-8 text-end">
+                    <p class="mb-0">{{ order.country }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <p class="mb-0"><strong>Ph Num:</strong></p>
+                </div>
+                <div class="col-8 text-end">
+                    <p class="mb-0">{{ order.phone_number }}</p>
+                </div>
+            </div>
+
+            <!-- Billing info -->
+            <div class="row">
+                <div class="col">
+                    <h5 class="text-center mb-0"><strong>Billing Information</strong></h5>
+                    <hr class="w-100 mb-2 mt-1 mx-auto">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <p class="mb-0"><strong>Order Total:</strong></p>
+                </div>
+                <div class="col-8 text-end">
+                    <p class="mb-0">{{ order.order_total }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <p class="mb-0"><strong>Shipping:</strong></p>
+                </div>
+                <div class="col-8 text-end">
+                    <p class="mb-0">{{ order.shipping_cost }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <p><strong>Total:</strong></p>
+                </div>
+                <div class="col-8 text-end">
+                    <p>{{ order.grand_total }}</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
