--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -41,7 +41,7 @@
                 </strong>
             </div>
             <div class="col text-end">
-                <span><strong>${{ items_total|floatformat:2 }}</strong></span>
+                <span><strong>€{{ items_total|floatformat:2 }}</strong></span>
             </div>
         </div>
 
@@ -49,7 +49,7 @@
             <div class="col">
                 {% if free_shipping_delta > 0 %}
                 <p class="mb-1 p-2 bg-blue text-white shadow-sm text-center">
-                    Spend <strong>${{ free_shipping_delta }}</strong> more to get free shipping!
+                    Spend <strong>€{{ free_shipping_delta }}</strong> more to get free shipping!
                 </p>
                 {% endif %}
                 <div class="d-flex justify-content-center">
