--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -5,9 +5,9 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<h2 class="text-center mt-2 "><strong>{% trans "Sign In" %}</strong></h2>
 
 {% get_providers as socialaccount_providers %}
 
@@ -29,18 +29,21 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+<p class="text-center">{% blocktrans %}If you have not created an account yet, then please
+<a href="{{ signup_url }}"><strong>sign up</strong></a> first.{% endblocktrans %}</p>
 {% endif %}
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-</form>
-
+<div class="row d-flex justify-content-center">
+  <div class="col-12 col-sm-8">
+    <form class="login" method="POST" action="{% url 'account_login' %}">
+      {% csrf_token %}
+      {{ form|crispy }}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      {% endif %}
+      <button class="btn btn-custom-yellow my-3" type="submit">{% trans "Sign In" %}</button>
+      <span><a class="button secondaryAction my-3" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a></span>
+    </form>
+  </div>
+</div>
 {% endblock %}
