--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -4,18 +4,21 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Out" %}</h1>
+{% block inner_content %}
+<h2 class="text-center  mt-2"><strong>{% trans "Sign Out" %}</strong></h2>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p class="text-center">{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
+<div class="row d-flex justify-content-center">
+  <div class="col-12 col-sm-8">
+    <form class="text-center" method="post" action="{% url 'account_logout' %}">
+      {% csrf_token %}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+      {% endif %}
+      <button class="btn btn-custom-yellow my-3" type="submit">{% trans 'Sign Out' %}</button>
+    </form>
+  </div>
+</div>
 
 {% endblock %}
