Add update info form and view #26

--- a/profiles/templates/profile.html
+++ b/profiles/templates/profile.html
@@ -9,8 +9,8 @@
 
 {% block content %}
 
-<div class="container text-center">
-    <div class="row">
+<div class="container">
+    <div class="row text-center">
         <div class="col mt-3 mb-3">
             <h2><strong>Profile</strong></h2>
             <hr class="w-75 mb-1 mx-auto">
@@ -18,17 +18,20 @@
     </div>
     <div class="row d-flex justify-content-center">
         <div class="col-11 col-lg-7 rounded-4 shadow bg-white mb-3 profile-dropdown">
-            <div>
+            <div class="text-center">
                 <a data-bs-toggle="collapse" href="#profile-info" role="button" aria-expanded="false"
                     aria-controls="profile-info" id="collapse-toggle">
                     <h2 class="mt-3"><i class="fa-solid fa-user fa-lg me-2"></i>Profile info</h2>
                     <p>Update your profile information</p>
-                    <i class="fas fa-angle-down mb-1"></i>
                 </a>
             </div>
             <div class="collapse" id="profile-info">
                 <div>
-                    <p>Update your info</p>
+                    <form method="POST" action="{% url 'profile' %}">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button class="btn btn-custom-yellow my-3" type="submit" name="edit_info">Save Information</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -36,12 +39,11 @@
 
     <div class="row d-flex justify-content-center">
         <div class="col-11 col-lg-7 rounded-4 shadow bg-white mb-3 profile-dropdown">
-            <div>
+            <div class="text-center">
                 <a data-bs-toggle="collapse" href="#account-password" role="button" aria-expanded="false"
                     aria-controls="account-password" id="collapse-toggle">
                     <h2 class="mt-3"><i class="fa-solid fa-lock fa-lg me-2"></i>Account Password</h2>
                     <p>Change your account password</p>
-                    <i class="fas fa-angle-down mb-1"></i>
                 </a>
             </div>
             <div class="collapse" id="account-password">
@@ -54,29 +56,27 @@
 
     <div class="row d-flex justify-content-center">
         <div class="col-11 col-lg-7 rounded-4 shadow bg-white mb-3 profile-dropdown">
-            <div>
+            <div class="text-center">
                 <a data-bs-toggle="collapse" href="#order-history" role="button" aria-expanded="false"
                     aria-controls="order-history" id="collapse-toggle">
                     <h2 class="mt-3"><i class="fa-solid fa-folder-open fa-lg me-2"></i>Order history</h2>
                     <p>View your order history</p>
-                    <i class="fas fa-angle-down mb-1"></i>
                 </a>
             </div>
             <div class="collapse" id="order-history">
                 <div>
-                    <p>Update your info</p>
+                    {{ orders }}
                 </div>
             </div>
         </div>
     </div>
     <div class="row d-flex justify-content-center">
         <div class="col-11 col-lg-7 rounded-4 shadow bg-white mb-3 profile-dropdown">
-            <div>
+            <div class="text-center">
                 <a data-bs-toggle="collapse" href="#wishlist" role="button" aria-expanded="false"
                     aria-controls="wishlist" id="collapse-toggle">
                     <h2 class="mt-3"><i class="fa-solid fa-heart fa-lg me-2"></i>Wishlist</h2>
                     <p>View your wishlist</p>
-                    <i class="fas fa-angle-down mb-2"></i>
                 </a>
             </div>
             <div class="collapse" id="wishlist">
@@ -89,3 +89,4 @@
 </div>
 
 {% endblock %}
+
