--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,8 +1,8 @@
 .profile-dropdown:hover {
     border: 0.1rem solid gray;
+    border-color: gray;
 }
 
 .profile-dropdown:hover {
-    color: var(--blue);
     border-color: var(--blue);
 }
