Add order history, url and view #29

--- a/basket/templates/basket.html
+++ b/basket/templates/basket.html
@@ -121,7 +121,7 @@
                     {% if free_shipping_delta > 0 %}
 
                     <small class="my-4 text-red text-center">
-                        For free shipping spend just <strong>${{ free_shipping_delta }}</strong> more!
+                        For free shipping spend just <strong>€{{ free_shipping_delta }}</strong> more!
                         <small />
                         {% endif %}
                 </div>
