--- a/profiles/templates/profile.html
+++ b/profiles/templates/profile.html
@@ -30,7 +30,8 @@
                     <form method="POST" action="{% url 'profile' %}">
                         {% csrf_token %}
                         {{ form|crispy }}
-                        <button class="btn btn-custom-yellow my-3" type="submit" name="edit_info">Save Information</button>
+                        <button class="btn btn-custom-yellow my-3" type="submit" name="edit_info">Save
+                            Information</button>
                     </form>
                 </div>
             </div>
@@ -42,7 +43,7 @@
             <div class="text-center">
                 <a data-bs-toggle="collapse" href="#account-password" role="button" aria-expanded="false"
                     aria-controls="account-password" id="collapse-toggle">
-                    <h2 class="mt-3"><i class="fa-solid fa-lock fa-lg me-2"></i>Account Password</h2>
+                    <h2 class="mt-3"><i class="fa-solid fa-lock fa-lg me-2"></i>Password</h2>
                     <p>Change your account password</p>
                 </a>
             </div>
@@ -64,8 +65,30 @@
                 </a>
             </div>
             <div class="collapse" id="order-history">
-                <div>
-                    {{ orders }}
+                <div class="order-history table-responsive">
+                    <table class="table table-sm table-borderless">
+                        <thead>
+                            <tr>
+                                <th>Order Number</th>
+                                <th>Date</th>
+                                <th>Order Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for order in orders %}
+                            <tr>
+                                <td>
+                                    <a class="text-blue" href="{% url 'order_history' order.order_number %}"
+                                        title="{{ order.order_number }}">
+                                        {{ order.order_number|truncatechars:6 }}
+                                    </a>
+                                </td>
+                                <td>{{ order.date}}</td>
+                                <td>€{{ order.grand_total }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -89,4 +112,3 @@
 </div>
 
 {% endblock %}
-
