--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -39,7 +39,6 @@
             <div class="details_container px-2">
                 <p class="mt-3 fs-4"><strong>{{ product.name }}</strong></p>
                 <p class="text-blue fs-5"><strong>€{{ product.price}}</strong></p>
-
                 <p class="mt-4">{{ product.description | safe }}</p>
 
                 <!-- add links for category, card set and expansion -->
@@ -77,7 +76,7 @@
                 </p>
                 {% endif %}
 
-                <div class="product-rating mb-3">
+                <div class="text-end mb-3">
                     {% if product.rating %}
                     <small class="mb-3"><i class="fas fa-star me-1 fs-6 text-yellow"></i><span class="text-gray">
                             {{ product.rating }} / 5 </span></small>
@@ -108,6 +107,12 @@
                         <i class="fas fa-arrow-left me-1"></i>Back to products
                     </a>
                 </div>
+                {% if request.user.is_superuser %}
+                    <div class="text-end mb-3">
+                        <a class="btn btn-custom-yellow" href="{% url 'edit_product' product.id %}">Edit</a>
+                        <a class="btn btn-custom-red" href="{% url 'delete_product' product.id %}">Delete</a>
+                    </div>     
+                {% endif%}
             </div>
         </div>
     </div>
