--- a/templates/includes/product_card.html
+++ b/templates/includes/product_card.html
@@ -66,7 +66,7 @@
                         {% if request.user.is_superuser %}
                             <div class="text-center mt-2">
                                 <a class="btn btn-custom-yellow" href="{% url 'edit_product' product.id %}">Edit</a>
-                                <a class="btn btn-custom-red" href="{% url 'delete_product' product.id %}">Delete</a>
+                                <button type="button" class="btn btn-custom-red" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">Delete</button>
                             </div>     
                         {% endif%}
                     </div>
@@ -75,3 +75,5 @@
         </div>
     </div>
 </div>
+<!-- Include the confirmation delete modal -->
+{% include 'includes/confirm_delete_modal.html' %}
